export enum Tamanho {
    PEQUENO = 'pequeno',
    MEDIO = 'medio',
    GRANDE = 'grande'
}

export enum Dificuldade {
    FACIL = 'facil',
    MEDIO = 'medio',
    DIFICIL = 'dificil'
}